fix: fixed theme setting bug on page load

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -19,9 +19,9 @@
           : "light";
 
         root.classList.add(systemTheme);
+      } else {
+        root.classList.add(theme);
       }
-
-      root.classList.add(theme);
     </script>
   </head>
   <body>
