feat: Added frontend OAuth & login page, documentation and imported Figma designs (#21)
* feat: added frontend oauth

* refactor: moved types and providers to their own files, added "state" param, and enhanced type safety

* feat: added login page and created basic theme system

* feat: added ThemeProvider & theme toggle, global Figtree font, and new features folders for roles

* fix: fixed theme setting bug on page load

* feat: added basic role-based routing for hacker and admin

* feat: updated file structure, added url validation and changed cookies name in auth lib

* feat: add authentication documentation and export createProvider function

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- TODO: CHANGE FAVICON -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO: Change page title</title>
+    <script>
+      // This script is used to prevent flashing on page load, as it loads the apporiate theme first before loading the css
+      const theme = (localStorage.getItem("swamphacks-ui-theme")) || "system";
+      const root = window.document.documentElement;
+
+      root.classList.remove("light", "dark");
+
+      if (theme === "system") {
+        const systemTheme = window.matchMedia("(prefers-color-scheme: dark)").matches
+          ? "dark"
+          : "light";
+
+        root.classList.add(systemTheme);
+      } else {
+        root.classList.add(theme);
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
