--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -8,7 +8,7 @@
     <title>TODO: Change page title</title>
     <script>
       // This script is used to prevent flashing on page load, as it loads the apporiate theme first before loading the css
-      const theme = localStorage.getItem("swamphacks-ui-theme") || "system";
+      const theme = localStorage.getItem("ui-theme") || "system";
       const root = window.document.documentElement;
 
       root.classList.remove("light", "dark");
@@ -22,6 +22,11 @@
         root.classList.add(systemTheme);
       } else {
         root.classList.add(theme);
+      }
+
+      // Only apply this class only after the theme has been applied, hence the calling the onload function
+      window.onload = () => {
+        document.body.classList.add("enable-theme-transition")
       }
     </script>
   </head>
