fix: fixed prettier error in index.html

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -26,8 +26,8 @@
 
       // Only apply this class only after the theme has been applied, hence the calling the onload function
       window.onload = () => {
-        document.body.classList.add("enable-theme-transition")
-      }
+        document.body.classList.add("enable-theme-transition");
+      };
     </script>
   </head>
   <body>
