--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- TODO: CHANGE FAVICON -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/core-favicon-light.svg" />
+
+    <link rel="icon" type="image/svg+xml" href="/core-favicon-light.svg" media="(prefers-color-scheme: light)"/>
+
+    <link rel="icon" type="image/svg+xml" href="/core-favicon-dark.svg" media="(prefers-color-scheme: dark)"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TODO: Change page title</title>
+    <title>SwampHacks Core</title>
     <script>
       // This script is used to prevent flashing on page load, as it loads the apporiate theme first before loading the css
       const theme = localStorage.getItem("ui-theme") || "system";
